[project]
name = "websearch-fetch-mcp"
version = "1.0.0"
description = "Web search and fetch MCP server with ability to convert html to MarkDown"
authors = [{name = "Ugo Varetto", email = "ugovaretto@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "fastmcp",
    "requests==2.31.0",
    "html2text",
    "docling",
    "deepsearch-toolkit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
websearch-fetch-mcp = "server:fastmcp.run"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
